[project]
name = "hust-ebus"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37.30",
    "fastapi[standard]>=0.115.12",
    "geopandas>=1.0.1",
    "psycopg[binary]>=3.2.6",
    "pyspark[connect]>=3.5.5",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "setuptools>=78.1.0",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.20",
    "confluent-kafka>=2.10.0",
]
